--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,11 @@ services:
       - /app/node_modules
     environment:
       - PORT=${BACKEND_PORT}
-      # - DATABASE_URL=postgresql://postgres:postgres@db:5432/mydb
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
+    networks:
+      - my-network
 
   db:
     image: postgres:15
@@ -23,10 +25,28 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: mydb
-    volumes:
-      - dbdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - my-network
 
-volumes:
-  dbdata:
+  prisma-studio:
+    build:
+      context: ./backend
+      dockerfile: docker/Dockerfile
+    command: npx prisma studio
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+    depends_on:
+      - db
+    ports:
+      - "5556:5555"
+    networks:
+      - my-network
+
+networks:
+  my-network:
